Bug 1610797 - Fix crash in [@ nsLDAPSSLClose]. r=benc

--HG--
extra : amend_source : 60d72982c1a231b84e5fb405deee3c6920ca1517